--- a/index.html
+++ b/index.html
@@ -10,3 +10,146 @@
   <p>Selamat datang di GitHub Pages 🚀</p>
 </body>
 </html>
+
+<!doctype html>
+<html lang="id">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>LinkCard — Your Links</title>
+  <meta name="description" content="Simple, elegant Linktree-style page" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <style>
+    :root{
+      --bg:#0f1724; /* deep navy */
+      --card:#0b1220;
+      --muted: #9aa4b2;
+      --accent1: linear-gradient(135deg,#7c3aed 0%,#4f46e5 50%,#06b6d4 100%);
+      --glass: rgba(255,255,255,0.04);
+      --radius:18px;
+      font-family: 'Inter', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
+    }
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0;
+      background: radial-gradient(1200px 600px at 10% 10%, rgba(99,102,241,0.08), transparent 8%),
+                  radial-gradient(900px 500px at 90% 90%, rgba(6,182,212,0.04), transparent 8%),
+                  var(--bg);
+      color:#e6eef8;
+      -webkit-font-smoothing:antialiased;
+      -moz-osx-font-smoothing:grayscale;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      padding:32px;
+    }
+
+    .container{
+      width:100%;
+      max-width:520px;
+      text-align:center;
+      padding:28px;
+    }
+
+    .profile-card{
+      background: linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
+      border-radius:var(--radius);
+      padding:28px;
+      box-shadow: 0 8px 30px rgba(2,6,23,0.6);
+      border: 1px solid rgba(255,255,255,0.03);
+    }
+
+    .avatar{
+      width:110px;height:110px;border-radius:999px;margin:0 auto 16px;
+      display:block;overflow:hidden;border:4px solid rgba(255,255,255,0.06);
+      background:linear-gradient(135deg,#111827,#0b1220);
+    }
+    .avatar img{width:100%;height:100%;object-fit:cover;display:block}
+
+    h1{margin:6px 0 0;font-size:20px;letter-spacing:0.2px}
+    p.bio{margin:8px 0 22px;color:var(--muted);font-size:13px}
+
+    .links{display:flex;flex-direction:column;gap:12px;padding:6px 16px 4px}
+    .link-btn{
+      display:flex;align-items:center;gap:12px;padding:14px 16px;border-radius:12px;text-decoration:none;
+      background:var(--glass);border:1px solid rgba(255,255,255,0.02);color:inherit;font-weight:600;
+      transition:transform .12s ease, box-shadow .12s ease, background .12s ease;
+      box-shadow: inset 0 -1px rgba(255,255,255,0.02);
+    }
+    .link-btn:hover{transform:translateY(-4px);box-shadow:0 10px 30px rgba(2,6,23,0.5)}
+
+    .link-icon{width:36px;height:36px;border-radius:10px;display:flex;align-items:center;justify-content:center;background:linear-gradient(135deg,#111827,#0b1220);border:1px solid rgba(255,255,255,0.03)}
+    .link-text{flex:1;text-align:left}
+    .link-sub{display:block;font-size:12px;color:var(--muted);font-weight:500}
+
+    .follow-row{display:flex;align-items:center;justify-content:center;gap:14px;margin-top:18px}
+    .social{width:40px;height:40px;border-radius:10px;display:inline-flex;align-items:center;justify-content:center;background:var(--glass);border:1px solid rgba(255,255,255,0.02)}
+
+    footer{margin-top:18px;color:var(--muted);font-size:13px}
+
+    .primary{background:var(--accent1);color:white;border:none}
+    .primary .link-icon{background:transparent;border-radius:8px}
+
+    @media (max-width:420px){
+      .container{padding:18px}
+      .avatar{width:96px;height:96px}
+    }
+  </style>
+</head>
+<body>
+  <main class="container" role="main">
+    <section class="profile-card" aria-labelledby="profile-name">
+      <div class="avatar" aria-hidden="true">
+        <img src="https://images.unsplash.com/photo-1545996124-1b5f3b0f6a5e?q=80&w=800&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="Avatar">
+      </div>
+      <h1 id="profile-name">Zennonwell Le</h1>
+      <p class="bio">Web developer • UI tinkerer • I build clean, fast landing pages and tiny web apps.</p>
+
+      <div class="links" aria-label="Links">
+        <a class="link-btn primary" href="#" target="_blank" rel="noopener noreferrer">
+          <span class="link-icon" aria-hidden="true">
+            <!-- X (Twitter) logo -->
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M18.244 2H21.5l-7.61 8.71L23 22h-7.094l-5.512-7.173L4.25 22H1l8.163-9.34L1 2h7.25l5.025 6.651L18.244 2zM17 20h2L7 4H5l12 16z"/></svg>
+          </span>
+          <span class="link-text">X
+            <span class="link-sub">Follow me on X</span>
+          </span>
+        </a>
+
+        <a class="link-btn" href="#" target="_blank" rel="noopener noreferrer">
+          <span class="link-icon" aria-hidden="true">
+            <!-- Instagram logo -->
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><rect x="2" y="2" width="20" height="20" rx="5" ry="5" stroke="currentColor" stroke-width="2"/><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z" stroke="currentColor" stroke-width="2"/><circle cx="17.5" cy="6.5" r="1.5" fill="currentColor"/></svg>
+          </span>
+          <span class="link-text">Instagram
+            <span class="link-sub">See my photos</span>
+          </span>
+        </a>
+
+        <a class="link-btn" href="#" target="_blank" rel="noopener noreferrer">
+          <span class="link-icon" aria-hidden="true">
+            <!-- OpenSea logo -->
+            <svg width="20" height="20" viewBox="0 0 256 256" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M128 0C57.307 0 0 57.307 0 128s57.307 128 128 128 128-57.307 128-128S198.693 0 128 0zm1.2 48.4l21.8 37.8-19.2 33.4-47 1-19.2 33.6 47.2 81.6c-46.2-4.4-82.4-43.6-82.4-91.8 0-50.8 41.2-92 92-92 2.4 0 4.8.2 7.2.4z"/></svg>
+          </span>
+          <span class="link-text">OpenSea
+            <span class="link-sub">View my NFTs</span>
+          </span>
+        </a>
+      </div>
+
+      <div class="follow-row" aria-label="Social links">
+        <a class="social" href="#" aria-label="GitHub" title="GitHub">
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 2C6.48 2 2 6.48 2 12c0 4.42 2.87 8.17 6.84 9.5.5.09.66-.22.66-.49 0-.24-.01-.87-.01-1.7-2.78.6-3.37-1.2-3.37-1.2-.45-1.16-1.11-1.47-1.11-1.47-.91-.62.07-.61.07-.61 1.01.07 1.54 1.04 1.54 1.04.9 1.54 2.36 1.1 2.94.84.09-.66.35-1.1.64-1.35-2.22-.25-4.55-1.11-4.55-4.93 0-1.09.39-1.98 1.03-2.68-.1-.25-.45-1.27.1-2.64 0 0 .84-.27 2.75 1.02A9.58 9.58 0 0 1 12 6.8c.85.004 1.71.115 2.51.34 1.9-1.29 2.74-1.02 2.74-1.02.55 1.37.2 2.39.1 2.64.64.7 1.03 1.6 1.03 2.68 0 3.83-2.34 4.67-4.57 4.92.36.31.68.92.68 1.85 0 1.34-.01 2.42-.01 2.75 0 .27.16.59.67.49A10.01 10.01 0 0 0 22 12c0-5.52-4.48-10-10-10z" fill="currentColor"/></svg>
+        </a>
+      </div>
+
+      <footer>
+        <span>Made with ♥ • Simple LinkCard</span>
+      </footer>
+    </section>
+  </main>
+</body>
+</html>
